--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-
 TgCrypto
 https://raw.githubusercontent.com/HasibulKabir/pyrogramarchive/master/pyrogramasyncv0.18.0.zip
 git+https://github.com/ytdl-org/youtube-dl
 wget
 pillow
 hachoir
+pyrogram
+requests
+pymongo[srv]
+aiofiles
+motor
+dnspython
