--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 TgCrypto
-git+https://github.com/ytdl-org/youtube-dl
 wget
 pillow
 hachoir
@@ -9,3 +8,5 @@ pymongo[srv]
 aiofiles
 motor
 dnspython
+youtube_dl
+uuid
