--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
+
 TgCrypto
-wget
-pillow
-hachoir
-pyrogram
-requests
-pymongo[srv]
-aiofiles
-motor
-dnspython
-youtube_dl
-uuid
+https://raw.githubusercontent.com/HasibulKabir/pyrogramarchive/master/pyrogramasyncv0.18.0.zip
+git+https://github.com/ytdl-org/youtube-dl
