--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@
 TgCrypto
 https://raw.githubusercontent.com/HasibulKabir/pyrogramarchive/master/pyrogramasyncv0.18.0.zip
 git+https://github.com/ytdl-org/youtube-dl
+pillow
+hachoir
+pymongo[srv]
+aiofiles
+motor
+dnspython
